fix: bug en lista de notificaciones en la clickeable-row y su texto

--- a/app/frontend/src/app/features/notificaciones/components/notificacion-list.component.html
+++ b/app/frontend/src/app/features/notificaciones/components/notificacion-list.component.html
@@ -96,7 +96,7 @@
         <tr mat-row *matRowDef="let row; columns: ['Emision', 'Plazo', 'CodExp', 'Titular', 'Funcionario', 'acciones'];" 
             class="clickable-row" 
             (click)="verDetalle(row)" 
-            matTooltip="Clic para ver detalles"></tr>
+            matTooltip=""></tr>
       </table>
 
       <!-- Mensaje cuando no hay datos -->
